# OltinPay

./: .env.example  .gitignore  LICENSE  LINT_ERRORS_TODO.md  NOTICE.md  OLTIN_EXCHANGE_SPEC.md  README.md  SECURITY.md  docker-compose.monitoring.yml  docker-compose.yml  docker-compose.yml.bak
oltinchain-api/: .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  pyproject.toml
oltinchain-api/alembic/: env.py
oltinchain-api/alembic/versions/: 001_add_orderbook_tables.py
oltinchain-api/app/: config.py  database.py  main.py
oltinchain-api/app/api/: deps.py  metrics_router.py
oltinchain-api/app/api/admin/: router.py  schemas.py
oltinchain-api/app/api/auth/: __init__.py  router.py  schemas.py
oltinchain-api/app/api/blockchain/: __init__.py  router.py  schemas.py
oltinchain-api/app/api/bots/: router.py
oltinchain-api/app/api/orderbook/: router.py  schemas.py
oltinchain-api/app/api/orders/: router.py  schemas.py
oltinchain-api/app/api/price/: router.py  schemas.py
oltinchain-api/app/api/reserves/: router.py  schemas.py
oltinchain-api/app/api/users/: __init__.py  router.py  schemas.py
oltinchain-api/app/api/wallet/: router.py  schemas.py
oltinchain-api/app/api/ws/: manager.py  router.py
oltinchain-api/app/application/interfaces/: balance_repository.py  blockchain.py  order_repository.py  user_repository.py
oltinchain-api/app/application/services/: auth_service.py  broadcast_service.py  metrics_service.py  order_service.py  orderbook_broadcast.py  orderbook_price.py  orderbook_service.py  price_oracle.py  price_service.py  reserves_service.py  wallet_service.py
oltinchain-api/app/domain/: exceptions.py
oltinchain-api/app/domain/models/: price_cycle.py
oltinchain-api/app/infrastructure/: models.py  pubsub.py  telegram.py
oltinchain-api/app/infrastructure/blockchain/: __init__.py  zksync_client.py  zksync_client_paymaster.py
oltinchain-api/migrations/: 001_add_telegram_fields.sql
oltinchain-api/tests/: conftest.py  test_health.py
oltinchain-api/tests/unit/: test_models.py  test_price_service.py
oltinchain-api/tests/unit/api/: test_deps.py  (+1 more)
oltinpay/oltinpay-api/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
oltinpay/oltinpay-api/alembic/: env.py
oltinpay/oltinpay-api/src/: config.py  database.py  main.py  notifications.py  redis_client.py
oltinpay/oltinpay-api/tests/: conftest.py  test_auth.py  test_balances.py  test_balances_onchain.py  test_bank.py  test_blockchain.py  test_concurrency_pg.py  test_contacts.py  test_deposits.py  test_indexer.py  test_por.py  test_rpc.py  test_scalar.py  test_signer_pool.py  test_staking_onchain.py  test_users.py  test_users_wallet.py  test_welcome.py  test_withdrawals.py
(+433 files in other folders)
